<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/loginFragment">
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.udacity.shoestore.screens.LoginFragment"
        android:label="@string/Login_Fragment_Title">
        <action
            android:id="@+id/action_loginFragment_to_welcome"
            app:destination="@id/welcome" />
    </fragment>
    <fragment
        android:id="@+id/welcome"
        android:name="com.udacity.shoestore.screens.WelcomeFragment"
        android:label="@string/Welcome_Fragment_Title"
        tools:layout="@layout/fragment_welcome">
        <action
            android:id="@+id/action_welcome_to_instructions"
            app:destination="@id/instructions" />
    </fragment>
    <fragment
        android:id="@+id/instructions"
        android:name="com.udacity.shoestore.screens.InstructionsFragment"
        android:label="@string/Instructions_Fragment_Title"
        tools:layout="@layout/fragment_instructions">
        <action
            android:id="@+id/action_instructions_to_shoeListFragment"
            app:destination="@id/shoeListFragment" />
    </fragment>
    <fragment
        android:id="@+id/shoeListFragment"
        android:name="com.udacity.shoestore.screens.ShoeListFragment"
        android:label="@string/ShoeList_Fragment_Title"
        tools:layout="@layout/fragment_shoe_list" />
</navigation>